<resources>
    <string name="app_name">Picwrite</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_album">Album</string>
    <string name="title_settings">Settings</string>
    <string name="title_diaryEntry">Diary Entry</string>
    <string name="title_diaryList">Diary List</string>
    <string name="title_signIn">Sign In</string>
    <string name="title_terms">Terms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">388119307495-b0e5n3oh5l16tiaee41noh7fmraj54lm.apps.googleusercontent.com</string>

    <string name="tv_terms_of_use">
    제1조 (<b>목적</b>)\n
    본 약관은 <b>PicWrite</b>(이하 "회사")가 운영·제공하는 정보 저장 서비스(이하 "서비스")에 대해 회사와 정보 저장 서비스를 이용하는 회원(이하 "회원") 간의 권리, 의무 및 책임 사항과 관련된 이용 조건 및 절차를 규정함을 목적으로 합니다.\n\n

    제2조 (<b>약관의 효력 및 변경</b>)\n
    본 약관은 서비스를 신청한 회원 또는 개인위치정보주체가 본 약관에 동의하고, 회사가 정한 소정의 절차에 따라 서비스 이용자로 등록함으로써 효력이 발생합니다.\n
    회사는 본 약관의 내용을 회원이 쉽게 알 수 있도록 서비스 초기 화면에 게시하거나 기타 방법으로 공지합니다.\n
    회사는 필요하다고 인정될 경우 본 약관을 변경할 수 있으며, 회사가 약관을 개정할 경우에는 기존 약관과 개정 약관 및 <b>개정 약관의 적용일자와 개정 사유</b>를 명시하여 개정일자 7일 전부터 적용일 이후 상당한 기간 동안 공지합니다.\n
    다만, 개정 내용이 회원에게 불리한 경우에는 그 적용일자 30일 전부터 공지합니다.\n
    회사가 공지한 후 회원이 7일 내에 거부 의사를 표시하지 않으면 변경된 약관에 동의한 것으로 봅니다. 회원이 개정 약관에 동의하지 않을 경우, 이용계약을 해지할 수 있습니다.\n\n

    제3조 (<b>약관 외 준칙</b>)\n
    본 약관에 규정되지 않은 사항에 대해서는 전기통신사업법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 "정보통신망법"), 개인정보 보호법 등 관련 법령 또는 회사가 정한 서비스의 운영정책 및 규칙 등의 규정에 따릅니다.\n\n

    제4조 (<b>서비스의 가입</b>)\n
    회원은 본 약관에 동의하고 서비스에 가입 신청함으로써 서비스의 이용자가 될 수 있습니다.\n\n

    제5조 (<b>서비스의 해지</b>)\n
    회원이 서비스 이용을 해지하고자 할 경우, 회원은 회사가 정한 절차(회원 탈퇴 버튼)를 통해 서비스 해지를 신청할 수 있으며, 회사는 법령이 정하는 바에 따라 신속히 처리합니다.\n\n

    제6조 (<b>서비스의 내용</b>)\n
    서비스는 연중무휴 1일 24시간 이용할 수 있습니다. 단, 회사의 업무 또는 기술상의 이유로 서비스가 일시 중단될 수 있으며, 운영상의 목적으로 회사가 정한 기간에도 일시 중단될 수 있습니다. 이 경우 회사는 사전 또는 사후에 공지합니다.\n
    회사는 사용자가 입력한 정보를 기반으로 서비스를 제공하며, 제공되는 서비스의 종류는 아래와 같습니다. 다만, 회사는 경영상, 사업상의 이유로 일부 서비스를 중단하거나 변경할 수 있습니다.\n
    1. 사진 및 글 저장: 서비스 이용 편의를 제공\n
    회사는 사용자가 입력한 자료를 자동으로 기록, 보존하며, 해당 자료는 서비스 탈퇴 즉시 파기합니다.\n\n

    제7조 (<b>서비스의 이용요금</b>)\n
    회사가 제공하는 정보 저장 서비스는 무료입니다. 다만, 무선 서비스 이용 시 발생하는 데이터 통신료는 회원이 가입한 이동통신사의 정책에 따릅니다.\n\n

    제8조 (<b>서비스 내용 변경 통지 등</b>)\n
    회사가 서비스 내용을 변경하거나 종료하는 경우, 회원의 등록된 휴대기기로 푸시 알림 등을 통해 통지할 수 있습니다.\n\n

    제9조 (<b>개인위치정보의 이용 또는 제공</b>)\n
    회사는 개인위치정보를 이용하여 서비스를 제공하고자 할 경우, 미리 약관에 명시하고 회원의 동의를 받습니다.\n
    회사는 회원이 지정한 제3자에게 개인위치정보를 제공할 경우, 제공받는 자와 제공 목적을 회원에게 고지하고 동의를 받습니다.\n\n

    제10조 (<b>개인위치정보주체의 권리</b>)\n
    회원은 언제든지 개인위치정보 이용에 대한 동의를 철회할 수 있으며, 회사는 수집된 정보와 확인 자료를 파기합니다.\n\n

</string>


</resources>