<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.picwrite.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar">
        <!--작성창 이동-->
        <action
            android:id="@+id/action_calendarFragment_to_diaryEntryFragment"
            app:destination="@id/navigation_diaryEntryFragment" />

        <!--목록창 이동-->
        <action
            android:id="@+id/action_calendarFragment_to_diaryListFragment"
            app:destination="@id/navigation_diaryListFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_diaryEntryFragment"
        android:name="com.example.picwrite.ui.diaryentry.DiaryEntryFragment"
        android:label="@string/title_diaryEntry"
        tools:layout="@layout/fragment_diary_entry">
        <!--이동-->
        <action
            android:id="@+id/action_diaryEntryFragment_to_calendarFragment"
            app:destination="@id/navigation_calendar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_diaryListFragment"
        android:name="com.example.picwrite.ui.diarylist.DiaryListFragment"
        android:label="@string/title_diaryList"
        tools:layout="@layout/fragment_diary_list">
    </fragment>

    <fragment
        android:id="@+id/navigation_album"
        android:name="com.example.picwrite.ui.album.AlbumFragment"
        android:label="@string/title_album"
        tools:layout="@layout/fragment_album" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.picwrite.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>